--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ NEXT_PUBLIC_PROJECT_ID=
 NEXT_PUBLIC_STORAGE_BUCKET=
 NEXT_PUBLIC_MESSAGING_SENDER_ID=
 NEXT_PUBLIC_APP_ID=
+
+NEXT_PUBLIC_URL=http://localhost:3000
