--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.2.1",
     "date-fns": "^2.29.3",
     "firebase": "^9.14.0",
+    "framer-motion": "^7.10.2",
     "next": "13.0.6",
     "phosphor-react": "^1.4.1",
     "react": "18.2.0",
