--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "apexcharts": "^3.36.3",
     "axios": "^1.2.1",
     "date-fns": "^2.29.3",
+    "dayjs": "^1.11.7",
     "firebase": "^9.14.0",
     "framer-motion": "^7.10.2",
     "next": "13.0.6",
