--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "@radix-ui/react-checkbox": "^1.0.1",
     "@radix-ui/react-dialog": "^1.0.2",
     "@react-query-firebase/auth": "^1.0.0-dev.2",
@@ -17,6 +18,7 @@
     "@types/react-dom": "18.0.9",
     "apexcharts": "^3.36.3",
     "axios": "^1.2.1",
+    "clsx": "^1.2.1",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
     "firebase": "^9.14.0",
